Actually fixed scrollbar

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -12,15 +12,13 @@
 	user-select: none
 	-webkit-user-select: none
 
-	&::webkit-scrollbar
-		display: none
-
 html,
 body,
 main
 	overflow-x: hidden
 
 body
+	overflow: hidden
 	margin: 0
 	opacity: 0
 	color: #ffffff
@@ -36,8 +34,11 @@ body
 		opacity: 1
 
 main
+	box-sizing: content-box
+	overflow-y: scroll
 	width: 100%
-	height: 100vh
+	height: 100%
+	padding-right: 16px
 	text-align: center
 
 span,
